--- a/style.css
+++ b/style.css
@@ -22,20 +22,20 @@ body {
 	width: 800px;
 }
 
-/* header{
-	border: 2px solid blue;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	flex-wrap: wrap;
-} */
-
-.main-title, header, footer {
+.main-title, header, .footer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 800px;
+	padding: 10px;
+}
 
+.main-title {
+	justify-content: space-between;
+}
+
+.main-text, .main-image {
+	flex: 1;
 }
 
 header {
@@ -43,13 +43,22 @@ header {
 	padding: 10px;
 }
 
-footer {
-	justify-self: flex-end;
-}
-
-
 .buttons {
 	border: solid yellow 2px;
 	display: flex;
 	gap: 10px;
+}
+p {
+	display: flex;
+	justify-content: flex-start;
+}
+
+.image-subtext, .images {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+}
+
+.image, .subtext {
+	min-width: 60px;
 }
