Improve styling of newsletter and spacing of images

--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ header, .main-title, .image-section, .quote, .newsletter, footer {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	width: 800px;
+	width: 100vw;
+	max-width: 800px;
 	padding: 10px;
 }
 
@@ -69,11 +70,13 @@ header, .main-title, .image-section, .quote, .newsletter, footer {
 	.main-title {
 		flex-wrap: nowrap;
 		justify-content: space-between;
+		gap: 20px;
 		background-color: #400036;
 		flex: 2;
 	}
 
 	.main-text, .hero-image {
+		justify-content: center;
 		display: flex;
 		flex: 1;
 		color: #FF81D0;
@@ -82,7 +85,7 @@ header, .main-title, .image-section, .quote, .newsletter, footer {
 	.main-text {
 		height: 100%;
 		flex-direction: column;
-		justify-content: space-between;
+		justify-content: space-around;
 	}
 
 	.hero-image {
@@ -100,12 +103,44 @@ header, .main-title, .image-section, .quote, .newsletter, footer {
 
 	.image-section {
 		flex: 2;
+		display: flex;
 		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 		background-color: white;
 		color: #400036;
 	}
 
-	.image {
+	.text {
+		flex: 1;
+		display: flex;
+		align-items: center;
+
+	}
+
+	.imageandtext {
+		display: flex;
+		flex-direction: row;
+		width: 100%;
+		justify-content: space-around;
+		flex: 1;
+	}
+
+	.test {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		width: 100%;
+		margin: 0px 30px;
+	}
+
+	.subtext, a {
+		flex: 1;
+		display: flex;
+		width: 100%;
+	}
+
+	a  {
 		border: 2px solid #105057;
 		border-radius: 25px;
 	}
@@ -113,23 +148,15 @@ header, .main-title, .image-section, .quote, .newsletter, footer {
 	.subtext {
 		color: #FF81D0;
 		font-size: 12px;
-	}
-
-	.image-subtext, .images {
-		display: flex;
+		flex: 0;
 		justify-content: center;
-		gap: 20px;
-	}
-
-	.image, .subtext {
-		min-width: 60px;
 	}
 
 /* QUOTE SECTION */
 
 	.quote {
+		background-color: #898C8B;
 		color: #105057;
-		border: #105057 1px dotted;
 		flex: 1;
 		justify-content: center;
 		align-items: center;
@@ -139,29 +166,33 @@ header, .main-title, .image-section, .quote, .newsletter, footer {
 /* NEWSLETTER */
 
 	.newsletter {
+		display: flex;
 		flex: 1;
-		background-color: #898C8B;
-		color: #898C8B;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		color: white;
 	}
 
 	.newsletter-content {
 		display: flex;
 		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 	}
 
 	.newsletter-text {
 		padding: 20px;
-		border: white solid 1px;
+		border: #898C8B solid 1px;
 		border-radius: 10px;
-		background-color: white;
+		background-color: #105057;
 	}
 
 /* FOOTER */
 
 	footer {
-		position: absolute;
-		bottom: 0;
 		flex: 0;
-		background-color: #105057;
+		background-color: #400036;
 		color: #FF81D0;
+		width: 100vw;
 	}
